# heimdallr-ida

./: README.md  heimdallr.py  pyproject.toml
heimdallr_utils/: plugin.py
